@@ -3,6 +3,7 @@ v1.6
 	+ Bug: Fix non-ascii characters when scrobbling with non-utf8 locale
 	+ Bug: Selected item changed on double-click
 	+ Bug: Use consistent behavior for titlebar
+	+ Bug: Prevent bad cover image files from causing problems
 
 v1.5.2 - June 5, 2008
 	+ Improved artwork/lyrics caching through case-insenstive searching
